fixed layout issue on template

--- a/trunk/styles/adminForms.css
+++ b/trunk/styles/adminForms.css
@@ -18,3 +18,7 @@ margin-right:10px;
 #redirectorList input.responseCode{
 width:50px;
 }
+
+div.element{
+margin-bottom:10px;
+}
